# ticklist

./: LICENSE  README.md  example.py  noxfile.py  pyproject.toml  snapshot_report.html
.github/workflows/: ci.yml
demo/: .gitignore  demo.py  main.py  main.tcss  models.py  simple.py
src/ticklist/: __init__.py  annotation_iterators.py  field_data.py  field_widgets.py  form.py  tick_annotations.py  types.py
tests/: app_with_form.py  app_with_form.tcss  conftest.py  test_field_data.py  test_field_widgets.py  test_tick_annotations.py
tests/snapshots/: test_field_widgets.py
tests/test_field_widgets_module/: __init__.py  test_generic.py  test_model_with_singular_annotation.py  test_nested_multiple_widgets.py  test_simple_multiple_widgets.py  test_submodel.py
