[project]
name = "ticklist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.2",
    "textual>=0.88.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.8",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pyproject-fmt>=2.5.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.1",
]

[tool.ruff]
src = [
  "noxfile.py",
  "src",
  "tests",
]

lint.select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]
lint.extend-per-file-ignores."tests/*" = [
  "D",
]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
source = [
  "ticklist",
]
branch = true

[tool.mypy]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
